# projects-OEIphone

./: CMakeLists.txt  OEIphone.dist  README.txt  ios-sim  main.cpp  makeapp.sh
Xcode/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  cmake_install.cmake
Xcode/AccelerationStructures/: CTestTestfile.cmake  cmake_install.cmake
Xcode/AccelerationStructures/CMakeScripts/: Extensions_AccelerationStructures_postBuildPhase.makeMinSizeRel  Extensions_AccelerationStructures_postBuildPhase.makeRelease
Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  RUN_TESTS_postBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  doc_cmakeRulesBuildPhase.makeMinSizeRel  doc_cmakeRulesBuildPhase.makeRelease
Xcode/IRC/: CTestTestfile.cmake  cmake_install.cmake
Xcode/MeshUtils/: CTestTestfile.cmake  cmake_install.cmake
Xcode/OEIphone/: CTestTestfile.cmake  cmake_install.cmake
Xcode/OpenEngine.xcodeproj/: project.pbxproj
Xcode/OpenGLESRenderer/: CTestTestfile.cmake  cmake_install.cmake
Xcode/OpenGLESResources/: CTestTestfile.cmake  cmake_install.cmake
Xcode/Sockets/: CTestTestfile.cmake  cmake_install.cmake
Xcode/TGAResource/: CTestTestfile.cmake  cmake_install.cmake
Xcode/iOERacer/: iOERacer-Prefix.pch  main.m
Xcode/iOSEnvironment/: CTestTestfile.cmake  cmake_install.cmake
Xcode/mesh-OBJResource/: CTestTestfile.cmake  cmake_install.cmake
Xcode/src/: CTestTestfile.cmake  cmake_install.cmake
repo-data/: Info.plist  MainWindow.xib  test.frag.glsl  test.glsl  test.vert.glsl
(+112 files in other folders)
